--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^20.11.30",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
